--- a/seller-acc-add-promotion.html
+++ b/seller-acc-add-promotion.html
@@ -230,8 +230,11 @@
                                                     </div>
                                                     <div class="col-12">
                                                         <div class="addpostbox">
-                                                            <a href="#" class="addposbtn">Add position
-                                                                <span>+</span></a>
+                                                            <a href="#" class="addposbtn" data-bs-toggle="modal"
+                                                                data-bs-target="#addposition">
+                                                                Add position
+                                                                <span>+</span>
+                                                            </a>
                                                             <p>
                                                                 <span>1</span> position selected
                                                                 <button><img src="img/header/delete-icon.svg"
@@ -378,7 +381,71 @@
     </footer>
 
 
+    <!-- Add position -->
+    <div class="modal fade generalmodal" id="addposition" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="productdetails addposition">
+                    <div class="closedetails" data-bs-dismiss="modal" aria-label="Close">
+                        <img src="img/account/close.svg" alt="close">
+                    </div>
+                    <p class="title">Add position</p>
+                    <div class="addposition__search">
+                        <div class="searchblock">
+                            <input type="text" placeholder="Search by product...">
+                            <button><img src="img/header/search-icon.svg" alt="search"></button>
+                        </div>
+                    </div>
+                    <div class="addposition__products">
+                        <div class="addposition__product">
+                            <input type="checkbox" id="pr1">
+                            <label for="pr1">
+                                <div class="addposition__product-check">
+                                    <span></span>
+                                </div>
+                                <div class="addposition__product-img">
+                                    <div class="imgwrap">
+                                        <img src="img/selleracc/table-product7.png" alt="img">
+                                    </div>
+                                </div>
+                                <div class="addposition__product-descr">
+                                    <p class="title">Light - With low carbohydrates - Fruit Carb Fitness SyrupMax...</p>
+                                    <p>Weight: 0.45 kg</p>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="addposition__product">
+                            <input type="checkbox" id="pr2">
+                            <label for="pr2">
+                                <div class="addposition__product-check">
+                                    <span></span>
+                                </div>
+                                <div class="addposition__product-img">
+                                    <div class="imgwrap">
+                                        <img src="img/selleracc/table-product2.png" alt="img">
+                                    </div>
+                                </div>
+                                <div class="addposition__product-descr">
+                                    <p class="title">Céréal Apricot Tart, Gluten Free, Lactose Free</p>
+                                    <p>Weight: 0.45 kg</p>
+                                </div>
+                            </label>
+                        </div>
 
+
+
+
+
+
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <a href="#" class="greenbtn">Add selected item</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
