--- a/sitemap.html
+++ b/sitemap.html
@@ -65,6 +65,8 @@
             <li><a href="seller-acc-order-list-addorder.html" target="_blank">Seller Account/Order list - Add Order</a></li>
             <li><a href="seller-acc-promotion-list.html" target="_blank">Seller Account / Promotion list</a></li>
             <li><a href="seller-acc-add-promotion.html" target="_blank">Seller Account / Add promotion</a></li>
+            <li><a href="seller-acc-coupon-create.html" target="_blank">Seller Account / Create Coupon</a></li>
+            <li><a href="seller-acc-coupon.html" target="_blank">Seller Account / Coupon</a></li>
         </ul>
     </div>
 
