--- a/sitemap.html
+++ b/sitemap.html
@@ -67,6 +67,8 @@
             <li><a href="seller-acc-add-promotion.html" target="_blank">Seller Account / Add promotion</a></li>
             <li><a href="seller-acc-coupon-create.html" target="_blank">Seller Account / Create Coupon</a></li>
             <li><a href="seller-acc-coupon.html" target="_blank">Seller Account / Coupon</a></li>
+            <li><a href="seller-acc-coupon-add.html" target="_blank">Seller Account / Add Coupon</a></li>
+            <li><a href="seller-acc-profile-settings.html" target="_blank">Seller Account / Profile Settings</a></li>
         </ul>
     </div>
 
