--- a/create-recipe.html
+++ b/create-recipe.html
@@ -179,14 +179,11 @@
                                 <p class="title">Recipe*</p>
                                 <div class="ingrwrap">
                                     <div class="ingrinp">
-                                        <p class="editcontent" contenteditable="true">3 tablespoons Gefen Olive Oil</p>
-                                    </div>
-                                    <div class="ingrinp">
-                                        <p class="editcontent" contenteditable="true">1/2 teaspoon salt</p>
+                                        <p class="editcontent" contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil vel magnam earum maxime eum neque? Inventore corporis placeat, qui eos quia modi nobis voluptatum ad asperiores, vel hic illo laudantium?</p>
                                     </div>
                                 </div>
                                 <div class="addingr">
-                                    <p>Add Ingredients <span class="addbtn">+</span></p>
+                                    <p>Add New <span class="addbtn">+</span></p>
                                 </div>
                             </div>
                             <div class="crrecradiosect">
