--- a/seller-acc-profile-settings.html
+++ b/seller-acc-profile-settings.html
@@ -65,6 +65,7 @@
                         <div class="aside-menubtn">
                             <img src="img/account/aside-menu.svg" alt="menu">
                         </div>
+
                         <aside class="accountsidebar">
                             <div class="accountsidebar__wrap">
                                 <div class="closesidebar">
@@ -124,6 +125,7 @@
                                         </li>
                                     </ul>
                                 </div>
+
                                 <div class="accountsidebar__box accountsidebar__box-seller signout">
                                     <ul>
                                         <li>
@@ -202,6 +204,7 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="formbox">
                                             <p class="selleraddproduct__title">Information about the company</p>
                                             <div class="row">
@@ -274,6 +277,7 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="formbox">
                                             <p class="selleraddproduct__title">Set up shipping and returns</p>
                                             <p class="setsubtitle">Choose the best shipping and returns experience for
@@ -313,6 +317,7 @@
                                                         </label>
                                                     </div>
                                                 </div>
+
                                                 <div class="col-xxl-2 col-lg-3">
                                                     <div class="inputfield">
                                                         <label for="state">State*</label>
@@ -327,6 +332,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
                                                 <div class="col-xxl-2 col-lg-3">
                                                     <div class="inputfield">
                                                         <input type="text" id="zipcode" placeholder="" required="">
@@ -335,6 +341,7 @@
                                                     </div>
                                                 </div>
                                             </div>
+
                                             <div class="shippingtemplate">
                                                 <p class="selleraddproduct__title">
                                                     Shipping Template
@@ -378,6 +385,7 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="formbox">
                                             <p class="selleraddproduct__title">Bank information</p>
 
@@ -461,6 +469,8 @@
                                                 <input type="submit" class="greenbtn" value="Save">
                                             </div>
                                         </div>
+
+
                                     </div>
                                 </div>
                             </div>
@@ -539,24 +549,32 @@
         </div>
     </footer>
 
+
     <!-- Sign OUt -->
     <div class="modal fade small" id="signout" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="bordergreenbtn" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="greenbtn">Save changes</button>
+                <div class="signoutwrap">
+                    <img src="img/selleracc/signoutimg.svg" alt="img">
+                    <p class="title">
+                        Oh no! You’re Leaving...<br>
+                        Are you sure?
+                    </p>
+                    <a href="#" class="greenbtn">Naah, just kidding</a>
+                    <a href="#" class="bordergreenbtn">Yes, Log Me Out</a>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
