--- a/sitemap.html
+++ b/sitemap.html
@@ -37,6 +37,10 @@
             <li><a target="_blank" href="blog-post.html">Blog post</a></li>
             <li><a target="_blank" href="create-blog.html">Create blog</a></li>
             <li><a target="_blank" href="edit-blog.html">Edit blog</a></li>
+            <br><br>
+            <li><h3>Admin</h3></li>
+            <li><a target="_blank" href="admin-all-customers.html">Admin - All Customers</a></li>
+            
         </ul>
         <ul>
             <li><h3>Account</h3></li>
