--- a/sitemap.html
+++ b/sitemap.html
@@ -40,6 +40,7 @@
             <br><br>
             <li><h3>Admin</h3></li>
             <li><a target="_blank" href="admin-all-customers.html">Admin - All Customers</a></li>
+            <li><a target="_blank" href="admin-all-customers-userprofile.html">Admin - All Customers/User Profile</a></li>
             
         </ul>
         <ul>
