--- a/sitemap.html
+++ b/sitemap.html
@@ -41,7 +41,9 @@
             <li><h3>Admin</h3></li>
             <li><a target="_blank" href="admin-all-customers.html">Admin - All Customers</a></li>
             <li><a target="_blank" href="admin-all-customers-userprofile.html">Admin - All Customers/User Profile</a></li>
-            
+            <li><a target="_blank" href="admin-all-customers-settings.html">Admin - All Customers/Settings</a></li>
+            <li><a target="_blank" href="admin-all-customers-sellerprofile.html">Admin -  Seller Profile</a></li>
+            <li><a target="_blank" href="admin-all-sellerprofile-settings.html">Admin -  Seller Profile / Settings</a></li>
         </ul>
         <ul>
             <li><h3>Account</h3></li>
@@ -78,7 +80,7 @@
     </div>
 
 
-
+    
     <style>
         .sitemap {
             padding: 30px;
