--- a/sitemap.html
+++ b/sitemap.html
@@ -44,6 +44,8 @@
             <li><a target="_blank" href="admin-all-customers-settings.html">Admin - All Customers/Settings</a></li>
             <li><a target="_blank" href="admin-all-customers-sellerprofile.html">Admin -  Seller Profile</a></li>
             <li><a target="_blank" href="admin-all-sellerprofile-settings.html">Admin -  Seller Profile / Settings</a></li>
+            <li><a target="_blank" href="admin-sellers-cards.html">Admin -  Sellers (Cards)</a></li>
+            <li><a target="_blank" href="admin-sellers-list.html">Admin -  Sellers (List)</a></li>
         </ul>
         <ul>
             <li><h3>Account</h3></li>
